If GetNetworkList fails, don't push down an empty network list.

WebRTC would rather have a possibly-outdated network list than an
empty one. So if GetNetworkList fails, we now just log an error
instead of persisting the empty list.

BUG=616908

Review-Url: https://codereview.chromium.org/2078913004
Cr-Commit-Position: refs/heads/master@{#401021}

Former-commit-id: ba6d6a649dd1db1125dc6b321f1ad159aac0412c